<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="20dp"
    tools:context="com.example.android.bluetoothlegatt.Activity.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_weight="1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profileImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/profile"
        android:layout_gravity="center_horizontal"
        app:civ_border_width="3dp"
        android:layout_marginBottom="5dp"
        app:civ_border_color="@color/colorAccent"/>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SizeTextviewProfile"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SizeTextviewProfile"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SizeTextviewProfile"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvBloodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SizeTextviewProfile"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underlying"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvUnderlyingDisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/SizeTextviewProfile"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            style="@style/SizeTextviewProfile"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tvDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginLeft="5dp"
            style="@style/SizeTextviewProfile" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout"/>

</LinearLayout>
